-----

10.3.11   to be released
    [Fixed]
        * parse_url 'bare' URLs should have their components URI encoded
        * 'host' URL component should not be required (but is) in parse_url
        * Undeclared variable '$type'
    [Added]
        * Tests for parse_url

10.3.10   2024-09-28
    [Fixed]
        * Package name of URI parser incorrect

10.3.9   2024-09-28
    [Added]
        * Parser of LibVirt URIs

10.3.8   2024-09-22
    [Added]
        * Added handling of streams

10.3.7   2024-09-14
    [Changed]
        * Regenerated with XDR::Gen v0.0.5,
          including generator fixes

10.3.6   2024-09-14
    [Changed]
        * Regenerated with XDR::Gen v0.0.4,
          including generator fixes
    [Fixed]
        * Added missing item to 10.3.5 CHANGES entry

10.3.5   2024-09-14
    [Added]
        * Reference to the protocol stability guarantees from
          the LibVirt project
    [Changed]
        * Regenerated with XDR::Gen v0.0.3,
          including generator fixes
    [Fixed]
        * Message (de)serializer names now correctly stripped of
          'remote_' prefix

10.3.4   2024-09-08
    [Fixed]
        * Use Log::Any->$log instead of 'say'
    [Added]
        * Documentation addition, including some hints as to
          that the module can be used with async/await style
          coding, e.g. using Future::AsyncAwait.

10.3.3   2024-09-06
    [Breaking]
        * Change signature on 'receive()' method in Transport to
          collect and return the return values of the callbacks;
          in Future-based code, these return values can be used
          to throttle receiving of data.
          A new 'need()' function is introduced to return what
          used to be returned by 'receive()'.
        * Change signature of 'on_send()' callback in Transport,
          adding an '$opaque' value which is to be returned after
          successful transfer of the data.

10.3.2   2024-09-01
    * Fix POD errors